--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -20,6 +20,7 @@
 html,
 body {
     height: 100%;
+    font-size: 62.5%;
 }
 
 /*
@@ -78,4 +79,32 @@ h6 {
 ul {
     list-style: none;
     padding: 0;
+}
+
+//font
+$roboto: 'Roboto',sans-serif;
+//colour
+$purple: #280bcabf;
+$cream: #dad7cd8d;
+
+
+@mixin respond($bp) {
+  @if $bp == phone  {
+    @media (max-width:400px) {
+      @content;
+    }
+  }
+
+  @if $bp == tab {
+    @media (min-width: 600px) {
+      @content;
+    }
+  }
+
+  @if $bp == lap {
+    @media (min-width: 1000px) {
+      @content;
+    }
+  }
+  
 }
