--- a/sass/_headerXfooter.scss
+++ b/sass/_headerXfooter.scss
@@ -10,7 +10,7 @@
     &__logo h2 {
         font-family: $roboto;
         font-weight: 700;
-        font-size: 2rem;
+        font-size: 2.4rem;
         padding-left: 1.2rem;
     }
 
@@ -26,7 +26,7 @@
             align-items: center;
 
             &--links {
-                font-size: 1.3rem;
+                font-size: 1.6rem;
                 font-family: $roboto;
                 font-weight: 400;
                 display: flex;
@@ -34,7 +34,7 @@
             }
 
             &--signing {
-                font-size: 1.4rem;
+                font-size: 1.7rem;
                 font-family: $roboto;
                 display: flex;
                 align-items: center;
@@ -44,12 +44,14 @@
                 &__btn {
                     border: none;
                     font-weight: 700;
+                    cursor: pointer;
                 }
 
                 &__btn-up {
                     border-radius: 7px;
                     padding: 1.1rem 1.4rem;
                     background-color: $purple;
+                    cursor: pointer;
                     
                     & a {
                         color: white;
@@ -65,6 +67,7 @@
 
     &__ham {
         padding-right: 2rem;
+        cursor: pointer;
 
         @include respond(tab) {
             display: none;
