--- a/sass/_headerXfooter.scss
+++ b/sass/_headerXfooter.scss
@@ -4,6 +4,7 @@
   background-color: $cream;
   padding: 1.9rem 0 1rem;
   border-bottom: 1px solid hsl(0, 1%, 73%);
+
   &_container {
     margin: 0 auto;
     width: $container;
@@ -11,37 +12,36 @@
     justify-content: space-between;
     align-items: center;
   }
+
   &__logo h2 {
     font-family: $roboto;
     font-weight: 700;
-    font-size: 2rem;
+    font-size: 3rem;
     padding-left: 1.2rem;
   }
 
   &__nav {
     display: none;
+  }
+
+  &__ham {
+    padding-right: 2rem;
+    cursor: pointer;
 
     @include respond(tab) {
-      display: flex;
-      width: 70%;
-      max-width: 55rem;
-      justify-content: space-between;
-      align-items: center;
+      display: none;
+    }
+  }
 
-      &--links {
-        font-size: 1.5rem;
-        font-family: $roboto;
-        font-weight: 700;
-        font-size: 2.4rem;
-        padding-left: 1.2rem;
-      }
 
-      &--signing {
-        font-size: 1.4rem;
-        font-family: $roboto;
+    @include respond(tab) {
+
+      &__nav {
         display: flex;
+        width: 77%;
+        max-width: 55rem;
+        justify-content: space-between;
         align-items: center;
-        gap: 1.5rem;
 
         &--links {
           font-size: 1.6rem;
@@ -54,19 +54,20 @@
         &--signing {
           font-size: 1.7rem;
           font-family: $roboto;
+          font-weight: 700;
           display: flex;
           align-items: center;
           gap: 1.5rem;
 
           &__btn {
             border: none;
-            font-weight: 700;
             cursor: pointer;
           }
-
+          
           &__btn-up {
             border-radius: 7px;
             padding: 1.1rem 1.4rem;
+            border: none;
             background-color: $purple;
             cursor: pointer;
 
@@ -78,36 +79,9 @@
           }
         }
       }
+
+    
     }
-
-    &__ham {
-      padding-right: 2rem;
-      cursor: pointer;
-
-      @include respond(tab) {
-        display: none;
-      }
-
-      &__btn-up {
-        border: none;
-        border-radius: 7px;
-        padding: 1.1rem 1.4rem;
-        background-color: $purple;
-
-        & a {
-          color: white;
-          text-decoration: none;
-          font-weight: 700;
-        }
-      }
-    }
-  }
-  &__ham {
-    padding-right: 2rem;
-  
-    @include respond(tab) {
-      display: none;
-    }
-  }
 }
+
 
