--- a/sass/style.css
+++ b/sass/style.css
@@ -152,6 +152,90 @@ ul {
   }
 }
 
+.footer {
+  background-color: rgba(218, 215, 205, 0.5529411765);
+}
+.footer__container {
+  width: 90%;
+  max-width: 85rem;
+  margin-inline: auto;
+  padding: 5rem 0;
+}
+.footer__heading {
+  font-size: 1.8rem;
+  font-weight: 700;
+  font-family: "Roboto", sans-serif;
+}
+.footer__list {
+  margin-top: 0.4rem;
+}
+.footer__list--item {
+  padding: 0.2rem 0;
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  font-size: 1.3rem;
+}
+.footer__fiber p {
+  font-size: 1.4rem;
+  font-weight: 400;
+  font-family: "Roboto", sans-serif;
+}
+.footer__fiber--gap {
+  margin-top: 1rem;
+}
+.footer__sitemap {
+  margin-top: 2rem;
+}
+.footer__resources {
+  margin-top: 2rem;
+}
+.footer__company {
+  margin-top: 2rem;
+}
+.footer__portfolios {
+  margin-top: 2rem;
+}
+@media (min-width: 850px) {
+  .footer__container {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+  }
+  .footer__heading {
+    font-size: 1.8rem;
+  }
+  .footer__list {
+    margin-top: 0.4rem;
+  }
+  .footer__list--item {
+    padding: 0.2rem 0;
+    font-family: "Roboto", sans-serif;
+    font-weight: 400;
+    font-size: 1.3rem;
+  }
+  .footer__fiber {
+    width: 35%;
+  }
+  .footer__fiber p {
+    font-size: 1.2rem;
+  }
+  .footer__fiber--gap {
+    margin-top: 1.4rem;
+  }
+  .footer__sitemap {
+    margin-top: 0;
+  }
+  .footer__resources {
+    margin-top: 0;
+  }
+  .footer__company {
+    margin-top: 0;
+  }
+  .footer__portfolios {
+    margin-top: 0;
+  }
+}
+
 .container__cream {
   background-color: rgba(218, 215, 205, 0.5529411765);
 }
