--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -214,9 +214,8 @@
         padding-bottom: 8rem;
         flex-direction: row;
         align-items: center;
-        padding-left: 2rem;
-        width: 90%;
-        max-width: 85rem;
+        width: $container;
+        gap: 2rem;
         margin-inline: auto;
         
 
