--- a/sass/style.css
+++ b/sass/style.css
@@ -88,7 +88,7 @@ ul {
 }
 .header_container {
   margin: 0 auto;
-  width: min(90%, 120rem);
+  width: min(90%, 100rem);
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -334,7 +334,7 @@ ul {
   .create-portfolio {
     flex-direction: row;
     align-items: center;
-    width: min(90%, 120rem);
+    width: min(90%, 100rem);
     margin-inline: auto;
   }
   .create-portfolio__text {
@@ -426,9 +426,8 @@ ul {
     padding-bottom: 8rem;
     flex-direction: row;
     align-items: center;
-    padding-left: 2rem;
-    width: 90%;
-    max-width: 85rem;
+    width: min(90%, 100rem);
+    gap: 2rem;
     margin-inline: auto;
   }
   .create-portfolio__text {
