--- a/sass/style.css
+++ b/sass/style.css
@@ -21,6 +21,7 @@ html,
 body {
   height: 100%;
   font-size: 62.5%;
+  overflow-x: hidden;
 }
 
 /*
@@ -493,7 +494,7 @@ ul {
 }
 
 .employability {
-  width: 90%;
+  width: min(90%, 100rem);
   margin-inline: auto;
 }
 .employability__header {
@@ -531,9 +532,6 @@ ul {
   width: 90%;
 }
 @media (min-width: 600px) {
-  .employability {
-    max-width: 80rem;
-  }
   .employability__header--para {
     font-size: 1.6rem;
   }
@@ -606,7 +604,6 @@ ul {
     flex-direction: row;
     align-items: center;
     gap: 0rem;
-    max-width: 80rem;
   }
   .diversity__text {
     padding: 3rem 2.2rem;
@@ -617,12 +614,14 @@ ul {
   }
   .diversity__text--p {
     font-size: 1.4rem;
+    font-weight: normal;
   }
   .diversity__text--btn {
     margin-top: 1.1rem;
     color: rgba(40, 11, 202, 0.7490196078);
     width: 14rem;
     padding: 1.2rem 0.7rem;
+    cursor: pointer;
   }
   .diversity__img-box {
     margin-inline: auto;
@@ -680,9 +679,11 @@ ul {
 @media (min-width: 1000px) {
   .testimonial {
     display: flex;
-    gap: 1.5rem;
-    width: 130%;
-    overflow: hidden;
+    gap: 3.5rem;
+    overflow-x: scroll;
+    width: 118rem;
+    scrollbar-gutter: blue;
+    scrollbar-thumb: blue;
   }
   .testimonial__box {
     padding: 1.5rem 1.2rem;
