--- a/sass/_headerXfooter.scss
+++ b/sass/_headerXfooter.scss
@@ -62,6 +62,7 @@
           &__btn {
             border: none;
             cursor: pointer;
+            background: transparent;
           }
           
           &__btn-up {
@@ -70,6 +71,11 @@
             border: none;
             background-color: $purple;
             cursor: pointer;
+            opacity: .85;
+            transition: opacity 300ms ease-in;
+            &:hover{
+              opacity: 1;
+            }
 
             & a {
               color: white;
