--- a/sass/style.css
+++ b/sass/style.css
@@ -138,6 +138,7 @@ ul {
   .header__nav--signing__btn {
     border: none;
     cursor: pointer;
+    background: transparent;
   }
   .header__nav--signing__btn-up {
     border-radius: 7px;
@@ -145,6 +146,11 @@ ul {
     border: none;
     background-color: rgba(40, 11, 202, 0.7490196078);
     cursor: pointer;
+    opacity: 0.85;
+    transition: opacity 300ms ease-in;
+  }
+  .header__nav--signing__btn-up:hover {
+    opacity: 1;
   }
   .header__nav--signing__btn-up a {
     color: white;
@@ -496,6 +502,7 @@ ul {
 .employability {
   width: min(90%, 100rem);
   margin-inline: auto;
+  padding-block: 5rem;
 }
 .employability__header {
   margin-top: 4.5rem;
@@ -559,7 +566,8 @@ ul {
   margin-top: 5.5rem;
   background-color: rgba(40, 11, 202, 0.7490196078);
   border-radius: 9px;
-  padding: 1.8rem 1.5rem 0 1.5rem;
+  padding-block: 4rem 0;
+  padding-inline: 2rem;
   display: flex;
   flex-direction: column;
   gap: 1.6rem;
@@ -578,7 +586,7 @@ ul {
 .diversity__text--p {
   color: white;
   font-size: 1.4rem;
-  font-weight: 100;
+  font-weight: normal;
   font-family: "Roboto", sans-serif;
 }
 .diversity__text--btn {
@@ -622,6 +630,11 @@ ul {
     width: 14rem;
     padding: 1.2rem 0.7rem;
     cursor: pointer;
+    opacity: 0.85;
+    transition: opacity 300ms ease-in;
+  }
+  .diversity__text--btn:hover {
+    opacity: 1;
   }
   .diversity__img-box {
     margin-inline: auto;
@@ -638,6 +651,9 @@ ul {
   border-radius: 9px;
   padding: 1.8rem;
   margin-bottom: 2.3rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 .testimonial__user {
   display: flex;
@@ -673,8 +689,15 @@ ul {
   font-size: 1.6rem;
   font-family: "Roboto", sans-serif;
   font-weight: 700;
-  border: 1px solid gray;
+  border: 1px solid rgba(218, 215, 205, 0.9176470588);
   border-radius: 9px;
+  cursor: pointer;
+  transition: all 300ms ease-in;
+}
+.testimonial__btn:hover {
+  border: 1px solid gray;
+  color: #280bca;
+  background: rgba(0, 0, 0, 0.048);
 }
 @media (min-width: 1000px) {
   .testimonial {
