--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -83,7 +83,7 @@ ul {
 }
 
 //font
-$roboto: "Roboto", sans-serif;
+$roboto: 'Inter', sans-serif;
 //colour
 $purple: #280bcabf;
 $purple-100: #280bca;
