--- a/sass/style.css
+++ b/sass/style.css
@@ -714,4 +714,88 @@ ul {
   .testimonial__btn {
     margin-bottom: 0.7rem;
   }
+}
+
+.sign {
+  margin-top: 2.5rem;
+}
+.sign__text {
+  width: min(90%, 80rem);
+  margin-inline: auto;
+}
+.sign__text--logo {
+  font-size: 2rem;
+  font-family: "Inter", sans-serif;
+  margin-bottom: 3.8rem;
+}
+.sign__text--heading {
+  font-size: 3.4rem;
+  line-height: 1.1;
+  font-family: "Inter", sans-serif;
+  margin-bottom: 1.8rem;
+}
+.sign__text--log {
+  font-family: "Inter", sans-serif;
+  margin-top: 1.1rem;
+  text-align: center;
+  font-size: 1.5rem;
+}
+.sign__text--log-link {
+  text-decoration: none;
+  padding-left: 7px;
+}
+.sign__form--group {
+  margin-bottom: 2.5rem;
+}
+.sign__form--input {
+  width: min(90%, 60rem);
+  padding: 1.5rem 1.1rem;
+  border-radius: 7px;
+  border: 1px solid rgba(128, 128, 128, 0.425);
+  font-size: 1.6rem;
+  font-family: "Inter", sans-serif;
+}
+.sign__form--info {
+  display: flex;
+  align-items: flex-start;
+  gap: 5px;
+  width: 90%;
+  margin-bottom: 2.5rem;
+}
+.sign__form--info-check {
+  cursor: pointer;
+  margin-top: 5px;
+  color: rgba(128, 128, 128, 0.425);
+}
+.sign__form--info-para {
+  font-size: 1.6rem;
+  font-family: "Inter", sans-serif;
+  font-weight: 400;
+}
+.sign__form--info-link {
+  color: rgba(40, 11, 202, 0.7490196078);
+  font-weight: 500;
+}
+.sign__form--btn {
+  width: 95%;
+  padding: 1.8rem 1rem;
+  font-size: 1.4rem;
+  color: white;
+  background-color: rgba(40, 11, 202, 0.7490196078);
+  font-weight: 700;
+  font-family: "Inter", sans-serif;
+  border: none;
+  border-radius: 7px;
+  cursor: pointer;
+}
+.sign__img-box {
+  display: none;
+}
+
+label {
+  display: block;
+  font-size: 1.6rem;
+  font-weight: 600;
+  font-family: "Inter", sans-serif;
+  margin-bottom: 0.3rem;
 }/*# sourceMappingURL=style.css.map */
