--- a/sass/style.css
+++ b/sass/style.css
@@ -791,6 +791,56 @@ ul {
 .sign__img-box {
   display: none;
 }
+@media (min-width: 600px) {
+  .sign {
+    display: flex;
+    padding: 1.1rem 1.8rem 5rem 1.8rem;
+  }
+  .sign__text {
+    width: 50%;
+    margin-inline: auto;
+  }
+  .sign__img-box {
+    display: block;
+    width: 50%;
+    background-color: rgba(40, 11, 202, 0.7490196078);
+    padding: 0 2.2rem;
+  }
+  .sign__img {
+    width: min(100%, 45rem);
+    margin-inline: auto;
+    margin-top: 10rem;
+  }
+  .sign__img--heading {
+    margin-top: 1.7rem;
+    color: white;
+    text-align: center;
+    font-size: 2rem;
+    font-family: "Inter", sans-serif;
+  }
+  .sign__img--para {
+    margin-top: 0.3rem;
+    color: white;
+    text-align: center;
+    font-size: 1.6rem;
+    font-family: "Inter", sans-serif;
+    width: 62%;
+    margin-inline: auto;
+  }
+  .sign__small-boxes {
+    margin-top: 1rem;
+    display: flex;
+    gap: 1.2rem;
+    justify-content: center;
+  }
+  .sign__small-box {
+    width: 1.2rem;
+    height: 1.2rem;
+    border-radius: 1222px;
+    border: 1px solid rgb(230, 209, 209);
+    cursor: pointer;
+  }
+}
 
 label {
   display: block;
@@ -804,4 +854,8 @@ label {
   cursor: pointer;
   display: inline;
   margin-left: -40px;
+}
+
+.box--1 {
+  background-color: white;
 }/*# sourceMappingURL=style.css.map */
