--- a/sass/_signUp.scss
+++ b/sass/_signUp.scss
@@ -1,113 +1,113 @@
-@use './base' as *;
+@use "./base" as *;
 
 .sign {
-    margin-top: 2.5rem;
-    display: flex;
-    justify-content: space-between;
-    
-    &__text {
-        width: 47%;
-        margin-inline: auto;
-        padding: 2rem;
+  margin-top: 2.5rem;
+  display: flex;
+  justify-content: space-between;
+  width: $container;
+  margin: 0 auto;
 
-        &--logo {
-            font-size: 2rem;
-            font-family: $roboto;
-            margin-bottom: 3.8rem;
-        }
-        
-        &--heading {
-            font-size: 3.4rem;
-            line-height: 1.1;
-            font-family: $roboto;
-            margin-bottom: 1.8rem;
-        }
-        
-        &--log {
-            font-family: $roboto;
-            margin-top: 1.1rem;
-            text-align: center;
-            font-size: 1.5rem;
+  &__text {
+    width: 47%;
+    margin-inline: auto;
+    padding: 2rem;
 
-            &-link {
-                text-decoration: none;
-                padding-left: 7px;
-            }
-        }
+    &--logo {
+      font-size: 2rem;
+      font-family: $roboto;
+      margin-bottom: 3.8rem;
     }
 
-
-    &__form {
-
-        &--group {
-            margin-bottom: 2.5rem;
-            
-        }
-        
-        &--input {
-            width: 100%;
-            padding: 1.5rem 1.1rem;
-            border-radius: 7px;
-            border: 1px solid rgba(128, 128, 128, 0.425);
-            font-size: 1.6rem;
-            font-family: $roboto;
-        }
-
-        &--info {
-            display: flex;
-            align-items: flex-start;
-            gap: 5px;
-            width: 90%;
-            margin-bottom: 2.5rem;
-            
-            &-check{
-                cursor: pointer;
-                margin-top: 5px;
-                color: rgba(128, 128, 128, 0.425);
-            }
-            
-            &-para{
-                font-size: 1.6rem;
-                font-family: $roboto;
-                font-weight: 400;
-            }
-            
-            &-link {
-                color: $purple;
-                font-weight: 500;
-            }
-        }
-
-        &--btn {
-            width: 100%;
-            padding: 1.8rem 1rem;
-            font-size: 1.4rem;
-            color: white;
-            background-color: $purple;
-            font-weight: 700;
-            font-family: $roboto;
-            border: none;
-            border-radius: 7px;
-            cursor: pointer;
-        }
+    &--heading {
+      font-size: 3.4rem;
+      line-height: 1.1;
+      font-family: $roboto;
+      margin-bottom: 1.8rem;
     }
 
+    &--log {
+      font-family: $roboto;
+      margin-top: 1.1rem;
+      text-align: center;
+      font-size: 1.5rem;
 
-    &__img-box{
-        width: 47%;
+      &-link {
+        text-decoration: none;
+        padding-left: 7px;
+      }
     }
+  }
+
+  &__form {
+    &--group {
+      margin-bottom: 2.5rem;
+      position: relative;
+    }
+
+    &--input {
+      width: 100%;
+      padding: 1.5rem 1.1rem;
+      border-radius: 7px;
+      border: 1px solid rgba(128, 128, 128, 0.425);
+      font-size: 1.6rem;
+      font-family: $roboto;
+    }
+
+    &--info {
+      display: flex;
+      align-items: flex-start;
+      gap: 5px;
+      width: 90%;
+      margin-bottom: 2.5rem;
+
+      &-check {
+        cursor: pointer;
+        margin-top: 5px;
+        color: rgba(128, 128, 128, 0.425);
+      }
+
+      &-para {
+        font-size: 1.6rem;
+        font-family: $roboto;
+        font-weight: 400;
+      }
+
+      &-link {
+        color: $purple;
+        font-weight: 500;
+      }
+    }
+
+    &--btn {
+      width: 100%;
+      padding: 1.8rem 1rem;
+      font-size: 1.4rem;
+      color: white;
+      background-color: $purple;
+      font-weight: 700;
+      font-family: $roboto;
+      border: none;
+      border-radius: 7px;
+      cursor: pointer;
+    }
+  }
+
+  &__img-box {
+    width: 47%;
+  }
 }
 
-label{
-    display: block;
-    font-size: 1.6rem;
-    font-weight: 600;
-    font-family: $roboto;
-    margin-bottom: .3rem;
+label {
+  display: block;
+  font-size: 1.6rem;
+  font-weight: 600;
+  font-family: $roboto;
+  margin-bottom: 0.3rem;
 }
 
 .password--img {
-    cursor: pointer;
-    display: inline;
-    margin-left: -40px;
+  cursor: pointer;
+  position: absolute;
+  left: 90%;
+  top:50%;
 }
