--- a/sass/_signUp.scss
+++ b/sass/_signUp.scss
@@ -4,7 +4,7 @@
   margin-top: 2.5rem;
   display: flex;
   justify-content: space-between;
-  width: $container;
+  height: 100vh;
   margin: 0 auto;
 
   &__text {
@@ -40,7 +40,7 @@
 
   &__form {
     &--group {
-      margin-bottom: 2.5rem;
+      margin-bottom: 1rem;
       position: relative;
     }
 
@@ -93,7 +93,22 @@
   }
 
   &__img-box {
-    width: 47%;
+    width: 50%;
+    background: $purple;
+    display: grid;
+    place-content: center;
+    color: #fff;
+    text-align: center;
+  }
+  &__img{
+    width: 80%;
+    margin: 0 auto;
+    &--heading{
+        font-size: 3.5rem;
+    }
+    &--para{
+        font-size: 1.2rem;
+    }
   }
 }
 
