--- a/sass/style.css
+++ b/sass/style.css
@@ -720,7 +720,7 @@ ul {
   margin-top: 2.5rem;
   display: flex;
   justify-content: space-between;
-  width: min(90%, 100rem);
+  height: 100vh;
   margin: 0 auto;
 }
 .sign__text {
@@ -750,7 +750,7 @@ ul {
   padding-left: 7px;
 }
 .sign__form--group {
-  margin-bottom: 2.5rem;
+  margin-bottom: 1rem;
   position: relative;
 }
 .sign__form--input {
@@ -795,7 +795,22 @@ ul {
   cursor: pointer;
 }
 .sign__img-box {
-  width: 47%;
+  width: 50%;
+  background: rgba(40, 11, 202, 0.7490196078);
+  display: grid;
+  place-content: center;
+  color: #fff;
+  text-align: center;
+}
+.sign__img {
+  width: 80%;
+  margin: 0 auto;
+}
+.sign__img--heading {
+  font-size: 3.5rem;
+}
+.sign__img--para {
+  font-size: 1.2rem;
 }
 
 label {
