--- a/sass/_signUp.scss
+++ b/sass/_signUp.scss
@@ -1,11 +1,10 @@
 @use "./base" as *;
 
 .sign {
-  margin-top: 2.5rem;
-  display: flex;
-  justify-content: space-between;
-  height: 100vh;
-  margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+    height: 100vh;
+    margin: 0 auto;
 
   &__text {
     width: 47%;
@@ -90,7 +89,7 @@
       border-radius: 7px;
       cursor: pointer;
     }
-  }
+}
 
   &__img-box {
     width: 50%;
@@ -99,15 +98,18 @@
     place-content: center;
     color: #fff;
     text-align: center;
+    padding: 1rem;
   }
   &__img{
-    width: 80%;
+    width: 70%;
     margin: 0 auto;
     &--heading{
         font-size: 3.5rem;
     }
     &--para{
-        font-size: 1.2rem;
+        font-size: 1.9rem;
+        margin: 0 auto;
+        width: 70%;
     }
   }
 }
