--- a/sass/style.css
+++ b/sass/style.css
@@ -717,7 +717,6 @@ ul {
 }
 
 .sign {
-  margin-top: 2.5rem;
   display: flex;
   justify-content: space-between;
   height: 100vh;
@@ -801,16 +800,19 @@ ul {
   place-content: center;
   color: #fff;
   text-align: center;
+  padding: 1rem;
 }
 .sign__img {
-  width: 80%;
+  width: 70%;
   margin: 0 auto;
 }
 .sign__img--heading {
   font-size: 3.5rem;
 }
 .sign__img--para {
-  font-size: 1.2rem;
+  font-size: 1.9rem;
+  margin: 0 auto;
+  width: 70%;
 }
 
 label {
