--- a/sass/style.css
+++ b/sass/style.css
@@ -810,8 +810,9 @@ ul {
   font-size: 3.5rem;
 }
 .sign__img--para {
-  font-size: 1.9rem;
-  margin: 0 auto;
+  font-size: 1.7rem;
+  margin: 0 auto 1rem;
+  line-height: 1.1;
   width: 70%;
 }
 
@@ -828,4 +829,28 @@ label {
   position: absolute;
   left: 90%;
   top: 50%;
+}
+
+.highlighted {
+  background: rgb(255, 255, 255);
+}
+
+.highlighted,
+.faded-highlight {
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+}
+
+.faded-highlight {
+  background: rgba(255, 255, 255, 0.336);
+}
+
+.identifiers {
+  display: flex;
+  gap: 1rem;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  margin: 0 auto;
 }/*# sourceMappingURL=style.css.map */
